Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>

	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
	so the child can actually exit when the parent does.

Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: Use new theme system.  Handle other
	themes better.

	* theme-thumbnail.c: new file to draw themes.  Currently
	synchronous -- needs to be made async.

Thu Nov  7 15:24:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk-theme-selector.desktop.in (Exec): change binary name.

Tue Nov  5 15:48:20 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (read_themes): make more robust.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Makefile.am : Add missing file

Fri Nov  1 11:01:16 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: Rewrote to handle metathemes and icon
	themes.  The WM stuff was previously broken, too.

	* gnome-theme-installer.[ch]: Extract this code out to it's own
	file.

2002-10-26  Havoc Pennington  <hp@pobox.com>

	* theme-switcher.c (window_read_themes): adapt to gnome-wm-manager
	API changes

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Yanko Kaneti <yaneti@declera.com>

	* gtk-theme-switcher.schemas: reorder elements so that it validates.

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-26  Jody Goldberg <jody@gnome.org>

	* theme-switcher.c (drag_data_received_cb) : unescape the string.

2002-09-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: use ../../libwindow-settings/libgnome-window-settings.la
	instead of -L../../libwindow-settings -lgnome-window-settings.
	Fixeds build breakage.

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-01  Christophe Fergeau  <teuf@users.sourceforge.net>

	* theme-switcher.c : correctly deal with bzip2
 	  compressed theme files
