@@ -1,3 +1,8 @@
+Sat Nov 16 00:55:58 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (meta_theme_selection_changed): actually
+	set the theme.
+
 Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
